--- a/config/content.htm
+++ b/config/content.htm
@@ -16,4 +16,4 @@
 <h1>solvespace介紹</h1>
 <h2>solvespace操作說明</h2>
 <p><img alt="" height="300" src="/images/solvespace 作品1完成圖.png" width="560"/></p>
-<p>作品1-完成圖</p>
+<p>作品1-完成品</p>
