--- a/content/solvespace操作說明.html
+++ b/content/solvespace操作說明.html
@@ -156,7 +156,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">solvespace介紹 << <a href='solvespace介紹.html'>Previous</a> <br /><h1>solvespace操作說明</h1>
 <p><img alt="" height="300" src="./../images/solvespace 作品1完成圖.png" width="560"/></p>
-<p>作品1-完成圖</p><br />solvespace介紹 << <a href='solvespace介紹.html'>Previous</a> </div>
+<p>作品1-完成品</p><br />solvespace介紹 << <a href='solvespace介紹.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
