--- a/content/solvespace介紹.html
+++ b/content/solvespace介紹.html
@@ -155,7 +155,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='solvespace操作說明.html'>Next</a> >> solvespace操作說明<br /><h1>solvespace介紹</h1>
-<br />Develop << <a href='Develop.html'>Previous</a> <a href='solvespace操作說明.html'>Next</a> >> solvespace操作說明</div>
+<p>希望能推上去</p><br />Develop << <a href='Develop.html'>Previous</a> <a href='solvespace操作說明.html'>Next</a> >> solvespace操作說明</div>
         
     <!-- footer -->
       <div class="container">
