--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -15,4 +15,5 @@
 <p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
 <h1>solvespace介紹</h1>
 <h2>solvespace操作說明</h2>
-<p></p>
+<p><img alt="" height="300" src="/images/solvespace 作品1完成圖.png" width="560"/></p>
+<p>作品1-完成品</p>
